# RTIOW-Rust

./: Cargo.toml  image.tiff  readme.md
src/: camera.rs  color.rs  hit.rs  hittable_list.rs  main.rs  material.rs  ray.rs  sphere.rs  uniform_wrapper.rs  vec3.rs
