[package]
name = "rtiow_rust"
version = "0.1.0"
authors = ["Kyle Bartholomew <kyle@kyleb.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0"
num = "^0"
enum_dispatch = "^0"

[profile.dev]
opt-level = 1
lto = true
debug = true
