[package]
name = "rtiow_rust"
version = "0.1.0"
authors = ["Kyle Bartholomew <kyle@kyleb.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0"
num = "^0"
enum_dispatch = "^0"
rand = "^0"
rayon = "^0"
indicatif = {version = "^0", features = ["rayon"]}

[profile.dev]
opt-level = 2
lto = true
debug = false
